--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   ],
   "require": {
     "php": "^7.4|^8",
-    "illuminate/support": "^6|^7|^8"
+    "illuminate/support": "^6|^7|^8|^9.0"
   },
   "autoload": {
     "psr-4": {
